buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.+', changing: true
    }
}
apply plugin: 'net.minecraftforge.gradle'

group = "Method"
version = "1.0.0"
archivesBaseName = 'MethodClient'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'

minecraft {
    mappings channel: 'stable', version: '39-1.12'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    //  makeObfSourceJar = true // an Srg named sources jar is made by default. uncomment this to disable.
    runs {
        client {
            workingDirectory project.file('run')
            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'
            property 'fml.coreMods.load', 'Method.Client.utils.Patcher.Core.CoreModPatcher'
            mods {
                client {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/main/resources' }

sourceSets.configureEach {
    it.output.resourcesDir = it.output.classesDirs.getFiles().iterator().next()
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude '**/Fields'
}

jar {
    manifest {
        attributes([
                "FMLCorePluginContainsFMLMod": true,
                "FMLCorePlugin"              : "Method.Client.utils.Patcher.Core.CoreModPatcher",
                "Specification-Title"        : "Client",
                "Specification-Vendor"       : "Method Client Dev",
                "Specification-Version"      : "1",
                "Implementation-Title"       : project.name,
                "Implementation-Version"     : project.version,
                "Implementation-Vendor"      : "Method Client Dev",
                "Implementation-Timestamp"   : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')
